--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -429,9 +429,9 @@ jobs:
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --output text)
-            export API_URL=http://${BACKEND_PUBLIC_IP}:3030
-            echo ${API_URL}
-            if curl -s $API_URL/api/status | grep "ok"
+            export API_URL="http://${BACKEND_PUBLIC_IP}:3030"
+            echo "${API_URL}"
+            if curl -s "$API_URL/api/status" | grep "ok"
             then
               exit 0
             else
