--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -419,6 +419,7 @@ jobs:
       - checkout
       - install_awscli
       - install_nodejs
+      - install_ansible
       - attach_workspace:
           at: ~/
       - run:
