--- a/.circleci/ansible/deploy-backend.yml
+++ b/.circleci/ansible/deploy-backend.yml
@@ -1,6 +1,40 @@
----
+# ---
 
-- name: "configuration play." 
+# - name: "configuration play." 
+#   hosts: web
+#   user: ubuntu
+#   gather_facts: false
+#   vars:
+#     - ansible_python_interpreter: /usr/bin/python3
+#     - ansible_host_key_checking: false
+#     - ansible_stdout_callback: yaml
+
+#   environment:
+#     - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
+#     - NODE_ENV: production
+#     - VERSION: "1"
+#     - TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR') }}"
+#     - TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES') }}"
+#     - TYPEORM_MIGRATIONS: "{{ lookup('env', 'TYPEORM_MIGRATIONS') }}"
+#     - TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST') }}"
+#     - TYPEORM_PORT: 5432
+#     - TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME') }}"
+#     - TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD') }}"
+#     - TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE') }}"
+
+#   pre_tasks:
+#     - name: "install python for Ansible."
+#       become: true
+#       raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
+#       changed_when: false
+
+#     - setup:
+    
+#   roles:
+#     - deploy
+
+---
+- name: "configuration play."
   hosts: web
   user: ubuntu
   gather_facts: false
@@ -8,27 +42,20 @@
     - ansible_python_interpreter: /usr/bin/python3
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
-
+  # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
-    - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
-    - NODE_ENV: production
-    - VERSION: "1"
-    - TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR') }}"
-    - TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES') }}"
-    - TYPEORM_MIGRATIONS: "{{ lookup('env', 'TYPEORM_MIGRATIONS') }}"
-    - TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST') }}"
+    - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
+    - TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
+    - TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST')}}"
     - TYPEORM_PORT: 5432
-    - TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME') }}"
-    - TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD') }}"
-    - TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE') }}"
-
-  pre_tasks:
-    - name: "install python for Ansible."
-      become: true
-      raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
-      changed_when: false
-
-    - setup:
-    
+    - TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME')}}"
+    - TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD')}}"
+    - TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE')}}"
+    - TYPEORM_MIGRATIONS: "{{ lookup('env', 'TYPEORM_MIGRATIONS')}}"
+    - TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR')}}"
   roles:
     - deploy
+
+
+
+
