--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -200,7 +200,7 @@ jobs:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
-      # Here's where you will add some code to rollback on the failures  
+      # Here is where you will add some code to rollback on the failures  
 
   configure-infrastructure:
     docker:
