--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -200,7 +200,7 @@ jobs:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
-      # Here's where you will add some code to rollback on failures  
+      # Here's where you may add some code to rollback on failures  
 
   configure-infrastructure:
     docker:
